--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Guilherme Honorio Strabello">
+    <meta name="description" content="Um projeto simples usando HTML e CSS">
     <title>Gui Tree</title>
     <link rel="stylesheet" href="style.css">
 </head>
